# OK-Energi

./: .gitignore  OK_ENERGI.xlsm  OK_ENERGI_test.xls  pyproject.toml  requirements.txt
OKEnergi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
okenergy/: ok_streamlit.py  pressure_drop.py
